<resources>
    <string name="app_name">Adroit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main Activity</string>
    <string name="createruletitle">Enter following details to create a rule</string>
    <string name="rulename">Rule name</string>
    <string name="georadius">Radius(in meters)</string>

    <string name="activitytype">Choose Activity Type</string>
    <string name="activitytype0">In Vehicle</string>
    <string name="activitytype1">On Bicycle</string>
    <string name="activitytype2">On Foot</string>
    <string name="activitytype3">Still</string>
    <string name="activitytype5">Tilting</string>
    <string name="activitytype7">Walking</string>
    <string name="activitytype8">Running</string>
    <string name="activitytype100">Choose an activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="locationtitle">Add a geolocation</string>
    <string name="destination_hint">Enter location/place name</string>
    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>

    <string name="playlistspinner">Choose a playlist</string>
    <string name="saverule">Save Rule</string>

</resources>
