<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_rule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.contextualmusicplayer.CreateRuleActivity">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createruletitle"
                android:textSize="10pt">
            </TextView>
            <EditText
                android:id="@+id/RuleTextName"
                android:layout_height="wrap_content"
                android:hint="@string/rulename"
                android:inputType="text"
                android:layout_width="fill_parent">
            </EditText>
            <Spinner
                android:id="@+id/SpinnerActivityType"
                android:layout_height="wrap_content"
                android:prompt="@string/activitytype"
                android:layout_width="fill_parent"
                android:entries="@array/activitytypelist">
            </Spinner>

            <TextView
                android:id="@+id/LocationTitle"
                android:layout_width="wrap_content"
                android:paddingTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/locationtitle"
                android:textSize="10pt">
            </TextView>
            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine"
                android:maxLines="2"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:hint="@string/destination_hint" />
            <TextView
                android:id="@+id/LatitudeTitle"
                android:layout_width="wrap_content"
                android:paddingTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/latitude">
            </TextView>
            <TextView
                android:id="@+id/LongitudeTitle"
                android:layout_width="wrap_content"
                android:paddingTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/longitude">
            </TextView>
            <EditText
                android:id="@+id/RadiusText"
                android:layout_height="wrap_content"
                android:hint="@string/georadius"
                android:paddingTop="10dp"
                android:inputType="numberSigned"
                android:layout_width="fill_parent">
            </EditText>
            <Spinner
                android:id="@+id/SpinnerPlaylist"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:prompt="@string/playlistspinner"
                android:layout_width="fill_parent">
            </Spinner>

            <Button
                android:id="@+id/saveRule"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/saverule"
                android:onClick="saveRule" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
